@@ -131,7 +131,7 @@ ILboolean ilutGLInit()
 	if (IsExtensionSupported("GL_ARB_texture_compression") &&
 		IsExtensionSupported("GL_EXT_texture_compression_s3tc")) {
 			ilGLCompressed2D = (ILGLCOMPRESSEDTEXIMAGE2DARBPROC)
-				glXGetProcAddressARB((unsigned char*)"glCompressedTexImage2DARB");
+				glXGetProcAddressARB((const GLubyte*)"glCompressedTexImage2DARB");
 	}
 #elif defined(__APPLE__)
 	if( IsExtensionSupported("GL_ARB_texture_compression") &&
